--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -8,7 +8,7 @@ en:
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
       already_authenticated: "You are already signed in."
-      deleted_account: "You've deleted your account."  
+      deleted_account: "You've deleted your account.  If you would like to reactive it please contact a center"
       inactive: "Your account is not activated yet."
       invalid: "Invalid %{authentication_keys} or password."
       locked: "Your account is locked."
